Final_SubTyping_Session/.antlr/SessionTypeParser.java
// Generated from c:\Users\jeane\Documents\Semestre 5\BSP_05\Subtyping_Session_Tool_SourceCode\TEST_SubTyping_Session_Tool_Source_Code\SessionType.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SessionTypeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PLUS=1, CLPAR=2, CRPAR=3, SLPAR=4, SRPAR=5, SEMIC=6, COMMA=7, DOT=8, AND=9, 
		REC=10, END=11, OUT=12, IN=13, ID=14, PRL=15, WHITESP=16;
	public static final int
		RULE_start = 0, RULE_stype = 1, RULE_sprimetype = 2, RULE_guarded = 3;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "stype", "sprimetype", "guarded"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'+'", "'{'", "'}'", "'['", "']'", "';'", "','", "'.'", "'&'", 
			"'rec'", "'end'", "'!'", "'?'", null, "'|'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PLUS", "CLPAR", "CRPAR", "SLPAR", "SRPAR", "SEMIC", "COMMA", "DOT", 
			"AND", "REC", "END", "OUT", "IN", "ID", "PRL", "WHITESP"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SessionType.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SessionTypeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public  type;
		public StypeContext s;
		public TerminalNode EOF() { return getToken(SessionTypeParser.EOF, 0); }
		public StypeContext stype() {
			return getRuleContext(StypeContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(8);
			((StartContext)_localctx).s = stype();
			_localctx.type = ((StartContext)_localctx).s.type if ((StartContext)_localctx).s.type is not None else ""
			setState(10);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StypeContext extends ParserRuleContext {
		public  type;
		public Token i;
		public Token s;
		public StypeContext st;
		public Token c;
		public Token i2;
		public Token s2;
		public StypeContext st2;
		public Token r;
		public Token d;
		public GuardedContext g;
		public Token e;
		public Token o;
		public Token prl;
		public SprimetypeContext spt;
		public Token sl;
		public Token o2;
		public Token sr;
		public Token n;
		public Token n2;
		public TerminalNode PLUS() { return getToken(SessionTypeParser.PLUS, 0); }
		public TerminalNode CLPAR() { return getToken(SessionTypeParser.CLPAR, 0); }
		public TerminalNode CRPAR() { return getToken(SessionTypeParser.CRPAR, 0); }
		public List<TerminalNode> ID() { return getTokens(SessionTypeParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SessionTypeParser.ID, i);
		}
		public List<TerminalNode> SEMIC() { return getTokens(SessionTypeParser.SEMIC); }
		public TerminalNode SEMIC(int i) {
			return getToken(SessionTypeParser.SEMIC, i);
		}
		public List<StypeContext> stype() {
			return getRuleContexts(StypeContext.class);
		}
		public StypeContext stype(int i) {
			return getRuleContext(StypeContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SessionTypeParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SessionTypeParser.COMMA, i);
		}
		public TerminalNode AND() { return getToken(SessionTypeParser.AND, 0); }
		public TerminalNode REC() { return getToken(SessionTypeParser.REC, 0); }
		public TerminalNode DOT() { return getToken(SessionTypeParser.DOT, 0); }
		public GuardedContext guarded() {
			return getRuleContext(GuardedContext.class,0);
		}
		public TerminalNode END() { return getToken(SessionTypeParser.END, 0); }
		public List<TerminalNode> OUT() { return getTokens(SessionTypeParser.OUT); }
		public TerminalNode OUT(int i) {
			return getToken(SessionTypeParser.OUT, i);
		}
		public TerminalNode PRL() { return getToken(SessionTypeParser.PRL, 0); }
		public SprimetypeContext sprimetype() {
			return getRuleContext(SprimetypeContext.class,0);
		}
		public TerminalNode SLPAR() { return getToken(SessionTypeParser.SLPAR, 0); }
		public TerminalNode SRPAR() { return getToken(SessionTypeParser.SRPAR, 0); }
		public List<TerminalNode> IN() { return getTokens(SessionTypeParser.IN); }
		public TerminalNode IN(int i) {
			return getToken(SessionTypeParser.IN, i);
		}
		public StypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stype; }
	}

	public final StypeContext stype() throws RecognitionException {
		StypeContext _localctx = new StypeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stype);
		int _la;
		try {
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(12);
				match(PLUS);
				setState(13);
				match(CLPAR);
				_localctx.type = "["
				setState(15);
				((StypeContext)_localctx).i = match(ID);
				setState(16);
				((StypeContext)_localctx).s = match(SEMIC);
				setState(17);
				((StypeContext)_localctx).st = stype();
				_localctx.type += "!" + (((StypeContext)_localctx).i!=null?((StypeContext)_localctx).i.getText():null) + (((StypeContext)_localctx).s!=null?((StypeContext)_localctx).s.getText():null) + (((StypeContext)_localctx).st.type if not ((StypeContext)_localctx).st.type == None else "") 
				setState(27);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(19);
					((StypeContext)_localctx).c = match(COMMA);
					setState(20);
					((StypeContext)_localctx).i2 = match(ID);
					setState(21);
					((StypeContext)_localctx).s2 = match(SEMIC);
					setState(22);
					((StypeContext)_localctx).st2 = stype();
					_localctx.type += (((StypeContext)_localctx).c!=null?((StypeContext)_localctx).c.getText():null) + "!" + (((StypeContext)_localctx).i2!=null?((StypeContext)_localctx).i2.getText():null) + (((StypeContext)_localctx).s2!=null?((StypeContext)_localctx).s2.getText():null) + (((StypeContext)_localctx).st2.type if not ((StypeContext)_localctx).st2.type == None else "")
					}
					}
					setState(29);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				_localctx.type += "]"
				setState(31);
				match(CRPAR);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(33);
				match(AND);
				setState(34);
				match(CLPAR);
				_localctx.type = "["
				setState(36);
				((StypeContext)_localctx).i = match(ID);
				setState(37);
				((StypeContext)_localctx).s = match(SEMIC);
				setState(38);
				((StypeContext)_localctx).st = stype();
				_localctx.type += "?" + (((StypeContext)_localctx).i!=null?((StypeContext)_localctx).i.getText():null) + (((StypeContext)_localctx).s!=null?((StypeContext)_localctx).s.getText():null) + (((StypeContext)_localctx).st.type if not ((StypeContext)_localctx).st.type == None else "") 
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(40);
					((StypeContext)_localctx).c = match(COMMA);
					setState(41);
					((StypeContext)_localctx).i2 = match(ID);
					setState(42);
					((StypeContext)_localctx).s2 = match(SEMIC);
					setState(43);
					((StypeContext)_localctx).st2 = stype();
					_localctx.type += (((StypeContext)_localctx).c!=null?((StypeContext)_localctx).c.getText():null) + "?" + (((StypeContext)_localctx).i2!=null?((StypeContext)_localctx).i2.getText():null) + (((StypeContext)_localctx).s2!=null?((StypeContext)_localctx).s2.getText():null) + (((StypeContext)_localctx).st2.type if not ((StypeContext)_localctx).st2.type == None else "")
					}
					}
					setState(50);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				_localctx.type += "]"
				setState(52);
				match(CRPAR);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(54);
				((StypeContext)_localctx).r = match(REC);
				setState(55);
				((StypeContext)_localctx).i = match(ID);
				setState(56);
				((StypeContext)_localctx).d = match(DOT);
				setState(57);
				((StypeContext)_localctx).g = guarded();
				_localctx.type = (((StypeContext)_localctx).r!=null?((StypeContext)_localctx).r.getText():null) + " V" + (((StypeContext)_localctx).i!=null?((StypeContext)_localctx).i.getText():null) + " " + (((StypeContext)_localctx).d!=null?((StypeContext)_localctx).d.getText():null) + (((StypeContext)_localctx).g.type if not ((StypeContext)_localctx).g.type == None else "")
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(60);
				((StypeContext)_localctx).i = match(ID);
				_localctx.type = "V" + (((StypeContext)_localctx).i!=null?((StypeContext)_localctx).i.getText():null)
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(62);
				((StypeContext)_localctx).e = match(END);
				_localctx.type = (((StypeContext)_localctx).e!=null?((StypeContext)_localctx).e.getText():null)
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(64);
				((StypeContext)_localctx).o = match(OUT);
				setState(65);
				((StypeContext)_localctx).i = match(ID);
				setState(66);
				((StypeContext)_localctx).s = match(SEMIC);
				setState(67);
				((StypeContext)_localctx).st = stype();
				_localctx.type = (((StypeContext)_localctx).o!=null?((StypeContext)_localctx).o.getText():null) + (((StypeContext)_localctx).i!=null?((StypeContext)_localctx).i.getText():null) + (((StypeContext)_localctx).s!=null?((StypeContext)_localctx).s.getText():null) + (((StypeContext)_localctx).st.type if not ((StypeContext)_localctx).st.type == None else "") 
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(70);
				((StypeContext)_localctx).e = match(END);
				setState(71);
				((StypeContext)_localctx).prl = match(PRL);
				setState(72);
				((StypeContext)_localctx).spt = sprimetype();
				_localctx.type = (((StypeContext)_localctx).e!=null?((StypeContext)_localctx).e.getText():null) + (((StypeContext)_localctx).prl!=null?((StypeContext)_localctx).prl.getText():null) + (((StypeContext)_localctx).spt!=null?_input.getText(((StypeContext)_localctx).spt.start,((StypeContext)_localctx).spt.stop):null) + (((StypeContext)_localctx).spt.type if not ((StypeContext)_localctx).spt.type == None else "") 
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(75);
				((StypeContext)_localctx).i = match(ID);
				setState(76);
				((StypeContext)_localctx).prl = match(PRL);
				setState(77);
				((StypeContext)_localctx).spt = sprimetype();
				_localctx.type = (((StypeContext)_localctx).i!=null?((StypeContext)_localctx).i.getText():null) + (((StypeContext)_localctx).prl!=null?((StypeContext)_localctx).prl.getText():null) + (((StypeContext)_localctx).spt!=null?_input.getText(((StypeContext)_localctx).spt.start,((StypeContext)_localctx).spt.stop):null) + (((StypeContext)_localctx).spt.type if not ((StypeContext)_localctx).spt.type == None else "") 
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(80);
				((StypeContext)_localctx).sl = match(SLPAR);
				setState(81);
				((StypeContext)_localctx).o = match(OUT);
				setState(82);
				((StypeContext)_localctx).i = match(ID);
				setState(83);
				((StypeContext)_localctx).s = match(SEMIC);
				setState(84);
				((StypeContext)_localctx).st = stype();
				_localctx.type = (((StypeContext)_localctx).sl!=null?((StypeContext)_localctx).sl.getText():null) + (((StypeContext)_localctx).o!=null?((StypeContext)_localctx).o.getText():null) + (((StypeContext)_localctx).i!=null?((StypeContext)_localctx).i.getText():null) + (((StypeContext)_localctx).s!=null?((StypeContext)_localctx).s.getText():null) + (((StypeContext)_localctx).st.type if not ((StypeContext)_localctx).st.type == None else "") 
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(86);
					((StypeContext)_localctx).c = match(COMMA);
					setState(87);
					((StypeContext)_localctx).o2 = match(OUT);
					setState(88);
					((StypeContext)_localctx).i2 = match(ID);
					setState(89);
					((StypeContext)_localctx).s2 = match(SEMIC);
					setState(90);
					((StypeContext)_localctx).st2 = stype();
					_localctx.type += (((StypeContext)_localctx).c!=null?((StypeContext)_localctx).c.getText():null) + (((StypeContext)_localctx).o2!=null?((StypeContext)_localctx).o2.getText():null) + (((StypeContext)_localctx).i2!=null?((StypeContext)_localctx).i2.getText():null) + (((StypeContext)_localctx).s2!=null?((StypeContext)_localctx).s2.getText():null) + (((StypeContext)_localctx).st2.type if not ((StypeContext)_localctx).st2.type == None else "")
					}
					}
					setState(97);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(98);
				((StypeContext)_localctx).sr = match(SRPAR);
				_localctx.type += (((StypeContext)_localctx).sr!=null?((StypeContext)_localctx).sr.getText():null)
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(101);
				((StypeContext)_localctx).n = match(IN);
				setState(102);
				((StypeContext)_localctx).i = match(ID);
				setState(103);
				((StypeContext)_localctx).s = match(SEMIC);
				setState(104);
				((StypeContext)_localctx).st = stype();
				_localctx.type = (((StypeContext)_localctx).n!=null?((StypeContext)_localctx).n.getText():null) + (((StypeContext)_localctx).i!=null?((StypeContext)_localctx).i.getText():null) + (((StypeContext)_localctx).s!=null?((StypeContext)_localctx).s.getText():null) + (((StypeContext)_localctx).st.type if not ((StypeContext)_localctx).st.type == None else "") 
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(107);
				((StypeContext)_localctx).sl = match(SLPAR);
				setState(108);
				((StypeContext)_localctx).n = match(IN);
				setState(109);
				((StypeContext)_localctx).i = match(ID);
				setState(110);
				((StypeContext)_localctx).s = match(SEMIC);
				setState(111);
				((StypeContext)_localctx).st = stype();
				_localctx.type = (((StypeContext)_localctx).sl!=null?((StypeContext)_localctx).sl.getText():null) + (((StypeContext)_localctx).n!=null?((StypeContext)_localctx).n.getText():null) + (((StypeContext)_localctx).i!=null?((StypeContext)_localctx).i.getText():null) + (((StypeContext)_localctx).s!=null?((StypeContext)_localctx).s.getText():null) + (((StypeContext)_localctx).st.type if not ((StypeContext)_localctx).st.type == None else "") 
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(113);
					((StypeContext)_localctx).c = match(COMMA);
					setState(114);
					((StypeContext)_localctx).n2 = match(IN);
					setState(115);
					((StypeContext)_localctx).i2 = match(ID);
					setState(116);
					((StypeContext)_localctx).s2 = match(SEMIC);
					setState(117);
					((StypeContext)_localctx).st2 = stype();
					_localctx.type += (((StypeContext)_localctx).c!=null?((StypeContext)_localctx).c.getText():null) + (((StypeContext)_localctx).n2!=null?((StypeContext)_localctx).n2.getText():null) + (((StypeContext)_localctx).i2!=null?((StypeContext)_localctx).i2.getText():null) + (((StypeContext)_localctx).s2!=null?((StypeContext)_localctx).s2.getText():null) + (((StypeContext)_localctx).st2.type if not ((StypeContext)_localctx).st2.type == None else "")
					}
					}
					setState(124);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(125);
				((StypeContext)_localctx).sr = match(SRPAR);
				_localctx.type += (((StypeContext)_localctx).sr!=null?((StypeContext)_localctx).sr.getText():null)
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SprimetypeContext extends ParserRuleContext {
		public  type;
		public Token i;
		public Token s;
		public SprimetypeContext st;
		public Token c;
		public Token i2;
		public Token s2;
		public SprimetypeContext st2;
		public Token r;
		public Token d;
		public GuardedContext g;
		public Token e;
		public Token o;
		public Token prl;
		public SprimetypeContext spt;
		public Token sl;
		public Token o2;
		public Token sr;
		public Token n;
		public Token n2;
		public TerminalNode PLUS() { return getToken(SessionTypeParser.PLUS, 0); }
		public TerminalNode CLPAR() { return getToken(SessionTypeParser.CLPAR, 0); }
		public TerminalNode CRPAR() { return getToken(SessionTypeParser.CRPAR, 0); }
		public List<TerminalNode> ID() { return getTokens(SessionTypeParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SessionTypeParser.ID, i);
		}
		public List<TerminalNode> SEMIC() { return getTokens(SessionTypeParser.SEMIC); }
		public TerminalNode SEMIC(int i) {
			return getToken(SessionTypeParser.SEMIC, i);
		}
		public List<SprimetypeContext> sprimetype() {
			return getRuleContexts(SprimetypeContext.class);
		}
		public SprimetypeContext sprimetype(int i) {
			return getRuleContext(SprimetypeContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SessionTypeParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SessionTypeParser.COMMA, i);
		}
		public TerminalNode AND() { return getToken(SessionTypeParser.AND, 0); }
		public TerminalNode REC() { return getToken(SessionTypeParser.REC, 0); }
		public TerminalNode DOT() { return getToken(SessionTypeParser.DOT, 0); }
		public GuardedContext guarded() {
			return getRuleContext(GuardedContext.class,0);
		}
		public TerminalNode END() { return getToken(SessionTypeParser.END, 0); }
		public List<TerminalNode> OUT() { return getTokens(SessionTypeParser.OUT); }
		public TerminalNode OUT(int i) {
			return getToken(SessionTypeParser.OUT, i);
		}
		public TerminalNode PRL() { return getToken(SessionTypeParser.PRL, 0); }
		public TerminalNode SLPAR() { return getToken(SessionTypeParser.SLPAR, 0); }
		public TerminalNode SRPAR() { return getToken(SessionTypeParser.SRPAR, 0); }
		public List<TerminalNode> IN() { return getTokens(SessionTypeParser.IN); }
		public TerminalNode IN(int i) {
			return getToken(SessionTypeParser.IN, i);
		}
		public SprimetypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sprimetype; }
	}
